--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import "_normalize";
 @import "_variables";
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap&subset=latin-ext');
 
 
 html {
@@ -11,6 +12,116 @@ html {
 }
 
 body {
-  color: $yellow;
-  background: $violet;
+  background: $lightcyan;
+  color: $lightcoral;
+  min-height: 100vh;
+  font-family: 'Montserrat', sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.simple-editor {
+  width: 100%;
+  max-width: 450px;
+  height: 500px;
+  background: #fff;
+  border: 4px solid lightgray;
+  border-top-right-radius: 50px;
+  border-bottom-left-radius: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  &__header {
+    padding-bottom: 20px; 
+    font-size: 35px;
+  }
+}
+
+.form {
+  width: 100%;
+  max-width: 320px;
+  z-index: 5;
+
+  &__title {
+
+    &--label {
+      font-weight: bold;
+    }
+
+    &--input {
+      border: 3px solid lightgray;
+      padding: 10px;
+      margin-top: 10px;
+      background: none;
+      width: 100%;
+    }
+  }
+
+  &__content {
+    padding-bottom: 20px;
+
+    &--label {
+      font-weight: bold;
+    }
+
+    &--input {
+      border: 3px solid lightgray;
+      padding: 10px;
+      margin-top: 10px;
+      width: 100%;
+      height: 130px;
+    }
+
+  }
+
+  &__buttons {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+
+    &--save {
+      margin-right: 20px;
+      background: #fff;
+      @include buttonDesign($lightcoral, $lightcoral);
+      width: 90px;
+      height: 40px;
+      position: relative;
+
+      &::before {
+        content: "";
+        position: absolute;
+        display: block;
+        background: $lightcoral;
+        width: 100%;
+        height: 100%;
+        top: 7px;
+        left: 7px;
+        z-index: -1;
+      }
+    }
+
+    &--load {
+      background: #fff;
+      @include buttonDesign($lightseagreen, $lightseagreen);
+      width: 90px;
+      height: 40px;
+      position: relative;
+
+      &::before {
+        content: "";
+        position: absolute;
+        display: block;
+        background: $lightseagreen;
+        width: 100%;
+        height: 100%;
+        top: 7px;
+        left: 7px;
+        z-index: -1;
+      }
+    }
+  }
 }
