--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,13 +1,14 @@
 @import "_normalize";
 @import "_variables";
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap&subset=latin-ext');
-
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap&subset=latin-ext");
 
 html {
   box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -15,7 +16,7 @@ body {
   background: $lightcyan;
   color: $lightcoral;
   min-height: 100vh;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -34,9 +35,10 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  box-shadow: 4px 4px 4px 4px lightgray;
 
   &__header {
-    padding-bottom: 20px; 
+    padding-bottom: 20px;
     font-size: 35px;
   }
 }
@@ -47,7 +49,6 @@ body {
   z-index: 5;
 
   &__title {
-
     &--label {
       font-weight: bold;
     }
@@ -75,7 +76,6 @@ body {
       width: 100%;
       height: 130px;
     }
-
   }
 
   &__buttons {
@@ -102,6 +102,11 @@ body {
         left: 7px;
         z-index: -1;
       }
+
+      &:hover {
+        background: $lightcoral;
+        color: #fff;
+      }
     }
 
     &--load {
@@ -121,6 +126,11 @@ body {
         top: 7px;
         left: 7px;
         z-index: -1;
+      }
+
+      &:hover {
+        background: $lightseagreen;
+        color: #fff;
       }
     }
   }
