--- a/css/main.css
+++ b/css/main.css
@@ -368,6 +368,8 @@ body {
   width: 100%;
   max-width: 320px;
   z-index: 5; }
+  .form__wrapper {
+    padding-bottom: 10px; }
   .form__title--label {
     font-weight: bold; }
   .form__title--input {
@@ -376,16 +378,14 @@ body {
     margin-top: 10px;
     background: none;
     width: 100%; }
-  .form__content {
-    padding-bottom: 20px; }
-    .form__content--label {
-      font-weight: bold; }
-    .form__content--input {
-      border: 3px solid lightgray;
-      padding: 10px;
-      margin-top: 10px;
-      width: 100%;
-      height: 130px; }
+  .form__content--label {
+    font-weight: bold; }
+  .form__content--input {
+    border: 3px solid lightgray;
+    padding: 10px;
+    margin-top: 10px;
+    width: 100%;
+    height: 130px; }
   .form__buttons {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -399,8 +399,7 @@ body {
       background: #fff;
       border: 3px solid lightcoral;
       color: lightcoral;
-      width: 90px;
-      height: 40px;
+      padding: 8px 25px;
       position: relative; }
       .form__buttons--save::before {
         content: "";
@@ -419,8 +418,7 @@ body {
       background: #fff;
       border: 3px solid lightseagreen;
       color: lightseagreen;
-      width: 90px;
-      height: 40px;
+      padding: 8px 25px;
       position: relative; }
       .form__buttons--load::before {
         content: "";
