--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,7 +25,7 @@ body {
 
 .simple-editor {
   width: 100%;
-  max-width: 450px;
+  max-width: 400px;
   height: 500px;
   background: #fff;
   border: 4px solid lightgray;
@@ -45,9 +45,8 @@ body {
 
 .form {
   width: 100%;
-  max-width: 320px;
+  max-width: 300px;
   z-index: 5;
-
   &__wrapper {
     padding-bottom: 10px;
   }
@@ -58,7 +57,7 @@ body {
     }
 
     &--input {
-      border: 3px solid lightgray;
+      border: 2px solid lightgray;
       padding: 10px;
       margin-top: 10px;
       background: none;
@@ -72,7 +71,7 @@ body {
     }
 
     &--input {
-      border: 3px solid lightgray;
+      border: 2px solid lightgray;
       padding: 10px;
       margin-top: 10px;
       width: 100%;
@@ -81,6 +80,7 @@ body {
   }
 
   &__buttons {
+    width: 100%;
     display: flex;
     justify-content: flex-end;
     margin-bottom: 20px;
@@ -91,6 +91,7 @@ body {
       @include buttonDesign($lightcoral, $lightcoral);
       padding: 8px 25px;
       position: relative;
+      transition: background 0.6s, color 0.6s;
 
       &::before {
         content: "";
@@ -115,6 +116,7 @@ body {
       @include buttonDesign($lightseagreen, $lightseagreen);
       padding: 8px 25px;
       position: relative;
+      transition: background 0.6s, color 0.6s;
 
       &::before {
         content: "";
@@ -132,6 +134,43 @@ body {
         background: $lightseagreen;
         color: #fff;
       }
+    }
+  }
+}
+
+@media screen and (max-width: $mobile) {
+  .simple-editor {
+    border: none;
+    background: none;
+    box-shadow: none;
+    max-width: 350px;
+
+    &__header {
+      font-size: 25px;
+    }
+  }
+
+  .form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+    &__title--input {
+      border: 1px solid lightgray;
+      background: lightcyan;
+      width: 250px;
+    }
+
+    &__content--input {
+      border: 1px solid lightgray;
+      background: lightcyan;
+      width: 250px;
+    }
+
+    &__buttons {
+      margin-right: 70px;
     }
   }
 }
