--- a/css/main.css
+++ b/css/main.css
@@ -339,7 +339,7 @@ body {
 
 .simple-editor {
   width: 100%;
-  max-width: 450px;
+  max-width: 400px;
   height: 500px;
   background: #fff;
   border: 4px solid lightgray;
@@ -366,14 +366,14 @@ body {
 
 .form {
   width: 100%;
-  max-width: 320px;
+  max-width: 300px;
   z-index: 5; }
   .form__wrapper {
     padding-bottom: 10px; }
   .form__title--label {
     font-weight: bold; }
   .form__title--input {
-    border: 3px solid lightgray;
+    border: 2px solid lightgray;
     padding: 10px;
     margin-top: 10px;
     background: none;
@@ -381,12 +381,13 @@ body {
   .form__content--label {
     font-weight: bold; }
   .form__content--input {
-    border: 3px solid lightgray;
+    border: 2px solid lightgray;
     padding: 10px;
     margin-top: 10px;
     width: 100%;
     height: 130px; }
   .form__buttons {
+    width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -400,7 +401,10 @@ body {
       border: 3px solid lightcoral;
       color: lightcoral;
       padding: 8px 25px;
-      position: relative; }
+      position: relative;
+      -webkit-transition: background 0.6s, color 0.6s;
+      -o-transition: background 0.6s, color 0.6s;
+      transition: background 0.6s, color 0.6s; }
       .form__buttons--save::before {
         content: "";
         position: absolute;
@@ -419,7 +423,10 @@ body {
       border: 3px solid lightseagreen;
       color: lightseagreen;
       padding: 8px 25px;
-      position: relative; }
+      position: relative;
+      -webkit-transition: background 0.6s, color 0.6s;
+      -o-transition: background 0.6s, color 0.6s;
+      transition: background 0.6s, color 0.6s; }
       .form__buttons--load::before {
         content: "";
         position: absolute;
@@ -433,5 +440,40 @@ body {
       .form__buttons--load:hover {
         background: lightseagreen;
         color: #fff; }
+
+@media screen and (max-width: 640px) {
+  .simple-editor {
+    border: none;
+    background: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    max-width: 350px; }
+    .simple-editor__header {
+      font-size: 25px; }
+  .form {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .form__title--input {
+      border: 1px solid lightgray;
+      background: lightcyan;
+      width: 250px; }
+    .form__content--input {
+      border: 1px solid lightgray;
+      background: lightcyan;
+      width: 250px; }
+    .form__buttons {
+      margin-right: 70px; } }
 
 /*# sourceMappingURL=main.css.map */
