--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -158,13 +158,13 @@ body {
     align-items: center;
     
     &__title--input {
-      border: 1px solid lightgray;
+      border: 1px solid lightcoral;
       background: lightcyan;
       width: 250px;
     }
 
     &__content--input {
-      border: 1px solid lightgray;
+      border: 1px solid lightcoral;
       background: lightcyan;
       width: 250px;
     }
