--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
 
 html {
   box-sizing: border-box;
+  font-size: 16px;
 }
 
 *,
@@ -13,8 +14,6 @@ html {
 }
 
 body {
-  background: $lightcyan;
-  color: $lightcoral;
   min-height: 100vh;
   font-family: "Montserrat", sans-serif;
   display: flex;
@@ -23,30 +22,33 @@ body {
   align-items: center;
 }
 
-.simple-editor {
+.main-container {
   width: 100%;
-  max-width: 400px;
-  height: 500px;
-  background: #fff;
-  border: 4px solid lightgray;
-  border-top-right-radius: 50px;
-  border-bottom-left-radius: 50px;
+  max-width: 1000px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: 4px 4px 4px 4px lightgray;
 
   &__header {
-    padding-bottom: 20px;
-    font-size: 35px;
+    width: 100%;
+    text-align: center;
   }
 }
 
-.form {
+.simple-editor {
   width: 100%;
-  max-width: 300px;
-  z-index: 5;
+  display: flex;
+  background-color: #fff;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22)
+}
+
+.form {
+  padding: 0.6rem;
+  flex-basis: 50%;
+  background: #fff;
   &__wrapper {
     padding-bottom: 10px;
   }
@@ -136,6 +138,18 @@ body {
       }
     }
   }
+}
+
+.hello {
+  padding: 0.6rem;
+  color: #fff;
+  flex-basis: 50%;
+  background: #FF416C;
+	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
+	background: linear-gradient(to right, #FF4B2B, #FF416C);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: 0 0;
 }
 
 @media screen and (max-width: $mobile) {
