--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@ html {
 }
 
 body {
+  background: #f6f5f7;
   min-height: 100vh;
   font-family: "Montserrat", sans-serif;
   display: flex;
@@ -24,60 +25,72 @@ body {
 
 .main-container {
   width: 100%;
-  max-width: 1000px;
+  max-width: 800px;
+  padding: 0.7rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 
   &__header {
+    font-size: 2.3rem;
     width: 100%;
     text-align: center;
+    margin-bottom: 3rem;
   }
 }
 
 .simple-editor {
   width: 100%;
+  margin-bottom: 8rem;
   display: flex;
   background-color: #fff;
   overflow: hidden;
   border-radius: 10px;
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22)
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .form {
   padding: 0.6rem;
   flex-basis: 50%;
+  order: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background: #fff;
+
+  &__header {
+    font-weight: 700;
+    font-size: 2rem;
+  }
+
   &__wrapper {
-    padding-bottom: 10px;
+    text-align: left;
+    width: 100%;
+    max-width: 300px;
   }
 
   &__title {
-    &--label {
-      font-weight: bold;
-    }
-
     &--input {
-      border: 2px solid lightgray;
-      padding: 10px;
-      margin-top: 10px;
-      background: none;
       width: 100%;
+      border: none;
+      margin-top: 0.3rem;
+      padding: 0.7rem 0.5rem;
+      font-size: 0.8rem;
+      background: #eee;
     }
   }
 
   &__content {
-    &--label {
-      font-weight: bold;
-    }
-
     &--input {
-      border: 2px solid lightgray;
-      padding: 10px;
-      margin-top: 10px;
       width: 100%;
-      height: 130px;
+      border: none;
+      margin-top: 0.3rem;
+      padding: 0.7rem 0.5rem;
+      font-size: 0.8rem;
+      height: 100px;
+      background: #eee;
     }
   }
 
@@ -85,57 +98,38 @@ body {
     width: 100%;
     display: flex;
     justify-content: flex-end;
-    margin-bottom: 20px;
+    margin-right: 5rem;
+  }
 
-    &--save {
-      margin-right: 20px;
-      background: #fff;
-      @include buttonDesign($lightcoral, $lightcoral);
-      padding: 8px 25px;
-      position: relative;
-      transition: background 0.6s, color 0.6s;
-
-      &::before {
-        content: "";
-        position: absolute;
-        display: block;
-        background: $lightcoral;
-        width: 100%;
-        height: 100%;
-        top: 7px;
-        left: 7px;
-        z-index: -1;
-      }
-
-      &:hover {
-        background: $lightcoral;
-        color: #fff;
-      }
+  &__button {
+    padding: 0.7rem 2.5rem;
+    border-radius: 20px;
+    border: 2px solid #ff4b2b;
+    background: #ff4b2b;
+    color: #fff;
+    font-size: 0.6rem;
+    letter-spacing: 0.1rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    transition: color 0.3s ease-in-out,
+                background 0.3s ease-in-out,
+                border 0.3s ease-in-out;
+    & + &--load {
+      margin-left: 0.5rem;
+      background: #eb335e;
+      border: 2px solid #eb335e;
     }
 
-    &--load {
+    &--save:hover {
+      color: #ff4b2b;
       background: #fff;
-      @include buttonDesign($lightseagreen, $lightseagreen);
-      padding: 8px 25px;
-      position: relative;
-      transition: background 0.6s, color 0.6s;
+      border: 2px solid #ff4b2b;
+    }
 
-      &::before {
-        content: "";
-        position: absolute;
-        display: block;
-        background: $lightseagreen;
-        width: 100%;
-        height: 100%;
-        top: 7px;
-        left: 7px;
-        z-index: -1;
-      }
-
-      &:hover {
-        background: $lightseagreen;
-        color: #fff;
-      }
+    &--load:hover {
+      color: #eb335e;
+      background: #fff;
+      border: 2px solid #eb335e;
     }
   }
 }
@@ -144,47 +138,55 @@ body {
   padding: 0.6rem;
   color: #fff;
   flex-basis: 50%;
-  background: #FF416C;
-	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-	background: linear-gradient(to right, #FF4B2B, #FF416C);
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: 0 0;
+  order: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #ff416c;
+  background: -webkit-linear-gradient(to right, #ff4b2b, #ff416c);
+  background: linear-gradient(to right, #ff4b2b, #ff416c);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0 0;
+
+  &__title {
+    font-weight: 700;
+    font-size: 2rem;
+    padding-bottom: 1rem;
+  }
+
+  &__message {
+    font-size: 0.9rem;
+    padding-bottom: 3rem;
+    max-width: 300px;
+    text-align: center;
+    letter-spacing: 0.5px;
+    line-height: 1.5rem;
+  }
 }
 
 @media screen and (max-width: $mobile) {
-  .simple-editor {
-    border: none;
-    background: none;
-    box-shadow: none;
-    max-width: 350px;
 
-    &__header {
-      font-size: 25px;
-    }
+  html {
+    font-size: 12px;
+  }
+
+  .simple-editor {
+    flex-direction: column;
   }
 
   .form {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    
-    &__title--input {
-      border: 1px solid lightcoral;
-      background: lightcyan;
-      width: 250px;
-    }
-
-    &__content--input {
-      border: 1px solid lightcoral;
-      background: lightcyan;
-      width: 250px;
-    }
+    order: 2;
 
     &__buttons {
-      margin-right: 70px;
+      justify-content: center;
+      margin-right: 0;
     }
+  }
+
+  .hello {
+    order: 1;
+    padding: 4rem 0;
   }
 }
